--- a/eureka-server/src/main/resources/application.properties
+++ b/eureka-server/src/main/resources/application.properties
@@ -1,19 +1,19 @@
 server.port=8081
 
-# id ?????????? eureka
+# id приложения eureka
 spring.application.name=eserver
 
 # ?.?. ??? ?? ??????, ? ??????, ?? ??????? ?????? ?????????
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
 
-# url ???? ????? ??????????? ??????????? ?????????????
+# url, куда будет происходить регистрация микросервисов
 eureka.client.service-url.defaultZone=http://localhost:8081/eureka
 
 # ??????????? ?????? ?????
 logging.level.com.netflix.eureka=off
 logging.level.com.netflix.discovery=off
 
-# ?????? ?????? ?????
+# более короткое отображение логов
 logging.pattern.console=%C{1.} [%-5level] %d{HH:mm:ss} - %msg%n
 
