--- a/eureka-client/src/main/resources/application.properties
+++ b/eureka-client/src/main/resources/application.properties
@@ -8,3 +8,6 @@ eureka.client.service-url.defaultZone=http://localhost:8081/eureka
 
 # более короткое отображение логов
 logging.pattern.console=%C{1.} [%-5level] %d{HH:mm:ss} - %msg%n
+
+# для того, чтобы каждый инстант имел уникальый id
+eureka.instance.instance-id=${spring.application.name}:${random.uuid}
