--- a/eureka-server/src/main/resources/application.properties
+++ b/eureka-server/src/main/resources/application.properties
@@ -10,7 +10,7 @@ eureka.client.fetch-registry=false
 # url, куда будет происходить регистрация микросервисов
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 
-# ??????????? ?????? ?????
+# настройки
 logging.level.com.netflix.eureka=off
 logging.level.com.netflix.discovery=off
 
